// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallRightArrowIcon Default props and rendering - Component in black colour verifies the snapshot for the component 1`] = `
<div
  className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-black"
  role="presentation"
/>
`;

exports[`SmallRightArrowIcon Transferred props and rendering - Component in white colour verifies the snapshot for the component 1`] = `
<div
  className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
  role="presentation"
/>
`;
